[gd_scene load_steps=11 format=3 uid="uid://jp6poj1pnbdo"]

[ext_resource type="Script" path="res://Scripts/Card Game.gd" id="1_caxro"]
[ext_resource type="Texture2D" uid="uid://4x1p5wihlkck" path="res://Textures/Card Game/CardGameBackground.png" id="2_vr6v5"]
[ext_resource type="PackedScene" uid="uid://d331lvmkjv6iq" path="res://Scenes/Card Selector.tscn" id="3_787ib"]
[ext_resource type="PackedScene" uid="uid://c5bha3rn2oxca" path="res://Scenes/Card.tscn" id="4_mep6m"]
[ext_resource type="Texture2D" uid="uid://csaw84ch1ybid" path="res://Textures/Card Game/GreyBox.png" id="5_3664a"]
[ext_resource type="FontFile" uid="uid://cbu8vn3w6qfok" path="res://Textures/Dialouge/QuinqueFive.woff2" id="5_xesof"]
[ext_resource type="Texture2D" uid="uid://cpsfhd3k8csgj" path="res://Textures/Card Game/Start Button.png" id="6_01xfi"]
[ext_resource type="AudioStream" uid="uid://s56e44ipy0ai" path="res://Textures/Music/Glorified.mp3" id="8_infjo"]

[sub_resource type="Animation" id="Animation_eox47"]
resource_name = "Fade Out"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8uqvy"]
_data = {
"Fade Out": SubResource("Animation_eox47")
}

[node name="Cards Game" type="Node2D"]
script = ExtResource("1_caxro")

[node name="Background" type="TextureRect" parent="."]
offset_right = 720.0
offset_bottom = 405.0
texture = ExtResource("2_vr6v5")

[node name="Card Selector" parent="." instance=ExtResource("3_787ib")]

[node name="CardOne" parent="." instance=ExtResource("4_mep6m")]
position = Vector2(136, 256)

[node name="CardTwo" parent="." instance=ExtResource("4_mep6m")]
position = Vector2(584, 256)

[node name="CardThree" parent="." instance=ExtResource("4_mep6m")]
position = Vector2(360, 256)

[node name="CardFour" parent="." instance=ExtResource("4_mep6m")]
visible = false
position = Vector2(248, 168)

[node name="CardFive" parent="." instance=ExtResource("4_mep6m")]
visible = false
position = Vector2(472, 168)

[node name="LevelLabel" type="RichTextLabel" parent="."]
offset_left = 64.0
offset_top = 40.0
offset_right = 256.0
offset_bottom = 80.0
theme_override_fonts/normal_font = ExtResource("5_xesof")
theme_override_font_sizes/normal_font_size = 15
text = "Level: 1/5"

[node name="CardCorrectLabel" type="RichTextLabel" parent="."]
offset_left = 336.0
offset_top = 40.0
offset_right = 664.0
offset_bottom = 80.0
theme_override_fonts/normal_font = ExtResource("5_xesof")
theme_override_font_sizes/normal_font_size = 15
text = "Cards Correct: 0/3"

[node name="Grey" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.705882)
offset_right = 720.0
offset_bottom = 405.0
texture = ExtResource("5_3664a")

[node name="ButtonLabel" type="RichTextLabel" parent="."]
top_level = true
offset_left = 296.0
offset_top = 176.0
offset_right = 464.0
offset_bottom = 249.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("5_xesof")
theme_override_font_sizes/normal_font_size = 20
text = "Start 
  Game"

[node name="StartButton" type="TextureButton" parent="."]
offset_left = 240.0
offset_top = 136.0
offset_right = 369.0
offset_bottom = 201.0
scale = Vector2(2, 2)
texture_normal = ExtResource("6_01xfi")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_infjo")
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Fade")
libraries = {
"": SubResource("AnimationLibrary_8uqvy")
}

[node name="Directions" type="RichTextLabel" parent="."]
offset_left = 240.0
offset_top = 280.0
offset_right = 520.0
offset_bottom = 376.0
theme_override_fonts/normal_font = ExtResource("5_xesof")
theme_override_font_sizes/normal_font_size = 10
text = "Memorize the cards on the screen before they flip over then click a number on the bottom and the card that you think has the number.
      Good Luck!"

[node name="Fade" type="TextureRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
top_level = true
offset_right = 720.0
offset_bottom = 405.0
texture = ExtResource("5_3664a")

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
